2010-04-07  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, sfcBroker.c, mlog.h, mlog.c:
	[ 2982924 ] Use a logging process to write to syslog

	* providerDrv.c:
	[ 2979028 ] Modify SFCB to not abort for socket errors
	(patch by John Powell)

2010-04-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 20_indication.mof, profileProvider.c, interopServerProvider.c:
	[ 2980820 ] Indication Profile 1.1 New attr values.

2010-03-29  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* providerMgr.c, msgqueue.c, msgqueue.h, cimXmlRequest.c:
	[ 2961560 ] Disallow InvokeMethod calls to internal provider methods

2010-03-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2974807 ] Can't have > 2 providers registered for the same classname

2010-03-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2969129 ] Missing dlclose() in httpAdapter.c

2010-03-12 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* value.c:
	[ 2968198 ] CMPI_chars in sfcb - see #2967257
        (patch by Klaus Kaempf)

2010-03-11 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2968656 ] cimcClientSfcbLocal.c does not clone return value
	(patch by Klaus Kaempf)

2010-03-10 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2968246 ] connect2 builds unnecessary struct

2010-03-09 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* instance.c:
	[ 2966804 ] setObjectPath returns uninitialized pointer

2010-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBroker.c:
	[ 2961422 ] Single HTTP Adapter

2010-03-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* configure.ac, test/pywbem/Makefile.am, test/pybwme/check_pywbem.py,
	  test/pywbem/ecn_interop.py:
	[ 2963601 ] pywbem tests

2010-03-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am in test subdirs
	[ 2963746 ] Incorrect license in test makefiles

2010-03-01 Sean Swehla <smswehla@linux.vnet.ibm.com>
