@@ -35,6 +35,7 @@ Bugs fixed:
 - 2961560 Disallow InvokeMethod calls to internal provider methods
 - 2982924 Use a logging process to write to syslog
 - 2979028 Modify SFCB to not abort for socket errors
+- 2979030 Restart the lexer when filter creation ends in a parsing err
 
 Changes in 1.3.7
 ================
